# spotter-api

./: .dockerignore  .env.example  .env.k8s.example  .gitignore  ADMIN_URLS.md  CHANGES.md  DEPLOYMENT_READY.md  Dockerfile  Makefile  README.md  SETUP.md  build.sh  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
eld_backend/: asgi.py  email_backends.py  urls.py  wsgi.py
eld_backend/settings/: __init__.py  base.py  development.py  production.py
k8s/: api-deployment.yaml  configmap.yaml  kind-config.yaml  namespace.yaml  postgres-deployment.yaml  secret.yaml
scripts/: create-secrets.sh  health-check.sh  teardown-confirm.sh  test_api_roles.py  wait-ready.sh
trip_planner/: admin.py  apps.py  authentication.py  constants.py  consumers.py  pagination.py  realtime.py  routing.py  schema.py  urls.py
trip_planner/migrations/: 0001_initial.py  0002_alter_auditlog_action_alter_dutystatussegment_status_and_more.py  0003_remove_viewer_role.py  0004_alter_auditlog_action.py
trip_planner/models/: __init__.py  audit.py  driver_profile.py  geocache.py  invitation.py  log.py  organization.py  stop.py  trip.py  user.py  vehicle.py  violation.py
trip_planner/permissions/: __init__.py  role_permissions.py
trip_planner/serializers/: __init__.py  auth.py  dashboard.py  invitation.py  organization.py  profile.py  trip_input.py  trip_output.py  vehicle.py
trip_planner/services/: email_service.py  geocoding.py  hos_calculator.py  invitation_service.py  log_builder.py  routing.py  trip_simulator.py
trip_planner/views/: __init__.py  (+8 more)
(+6 files in other folders)
